# whisper-burn

./: .gitignore  Cargo.toml  README.md  audio.txt
python/: convert_huggingface_model.py  dump.py  requirements.txt
src/: audio.rs  beam.rs  executor.rs  helper.rs  lib.rs  load.rs  main.rs  model.rs  token.rs  transcribe.rs
src/cache/: autoregressive.rs  base.rs  mod.rs
src/model/: load.rs  mod.rs
