[package]
name = "whisper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = "0.8.0"
burn-tch = "0.8.0"
serde = {version = "1.0.171", features = ["std", "derive"]}
num-traits = "0.2.15"
hound = "3.5.0"
tokenizers = {version = "0.13.3", default-features = false, features = [
  "onig",
  "http",
]}